api call to get names and ids of all organisers.
