# backend/Web/wwwroot/swagger/specification.json
@@ -45,7 +45,7 @@
         }
       }
     },
-    "/api/Organiser/Add/ContactInformation": {
+    "/api/Organiser/add/contactInformation": {
       "post": {
         "tags": [
           "Organiser"
@@ -74,6 +74,26 @@
             "description": "",
             "schema": {
               "$ref": "#/definitions/AddContactsToOrganiserResponse"
+            }
+          }
+        }
+      }
+    },
+    "/api/Organiser/all": {
+      "get": {
+        "tags": [
+          "Organiser"
+        ],
+        "operationId": "Organiser_GetAllOrganisers",
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/GetAllOrganisersResponse"
+              }
             }
           }
         }
@@ -225,6 +245,21 @@
           "additionalProperties": {
             "$ref": "#/definitions/ContactInfoType"
           }
+        }
+      }
+    },
+    "GetAllOrganisersResponse": {
+      "type": "object",
+      "required": [
+        "id"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
         }
       }
     },
